# ITK

./: .gitignore  CMakeLists.txt  README.md
Doc/: ITK_note.md
Practice/20220420/: CMakeLists.txt  hello_itk.cpp
